# adventofcode

./: Cargo.toml
.github/workflows/: ci.yml
2021/day01/: Cargo.toml
2021/day02/: Cargo.toml
2021/day02/src/: main.rs
2021/day03/: Cargo.toml
2021/day03/src/: main.rs
2021/day04/: Cargo.toml
2021/day04/src/: main.rs
adventofcode-2021/: Cargo.toml
adventofcode-2021/src/: main.rs
aoc/: Cargo.toml
aoc/src/: lib.rs
aoc_derive/: Cargo.toml
aoc_derive/src/: lib.rs
solutions/: Cargo.toml
solutions/src/: main.rs  util.rs
solutions/src/year_2021/: day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  day07.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
solutions/src/year_2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
solutions/src/year_2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
