[package]
name = "solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
clap = { version = "4.4", features = ["derive"] }
glam = "0.24"
inventory = "0.3"
ndarray = "0.15"
nom = "7.1"
parse-display = "0.8"
pathfinding = "4.0"
itertools = "*"
rayon = "1.6"
indicatif = "0.17"
lazy_static = "1.4"
hashbrown = "0.14"
regex = "1.7"
fancy-regex = "0.12"
num = "0.4"

[features]
slow-tests = []
